[package]
name = "hwbp"
version = "0.1.0"
authors = ["wildbook <book.wille@gmail.com>"]
edition = "2021"

[features]
default = []

[dependencies]
ntapi = { version = "0.3.6", optional = true }

[dependencies.winapi]
version = "^0.3"
default-features = false
features = ["std", "processthreadsapi"]

[dev-dependencies.winapi]
version = "^0.3"
default-features = false
features = ["errhandlingapi"]
